begin moving assest and content over to contentful

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <header class="masthead">
       <div class="header-content">
         <div class="header-content-inner">
-          <h1 id="homeHeading">Full Service Bookkeeping for Your Business</h1>
+          <h1 id="homeHeading"></h1>
           <!-- <hr>
           <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p> -->
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
@@ -87,11 +87,8 @@
           <div class="col-lg-10 mx-auto text-center">
             <h1 class="section-heading text-white">About</h1>
 
-            <p class="text-faded">
-              Be Wise Bookkeeping is a full-charge bookkeeping service. From initial set-up, bank reconciliations,
-              accounts payable and receivables, cash management, payroll, general ledger to financial reports,
-              I go beyond the bottom line to help you reach your goals while sticking to your values.
-              My services allow you to focus on what you do best — cultivate your business.
+            <p class="text-faded about-text">
+
             </p>
 
             <hr class="light"/>
@@ -125,96 +122,28 @@
             </div>
 
 
+            <span id="industry-experience">
+              <hr class="light">
+              <h2 class="section-heading text-white">Industry Experience</h2>
 
-            <hr class="light">
-            <h2 class="section-heading text-white">Industry Experience</h2>
-
-            <p class="text-faded">
-              Janet has over 30 years of experience serving clients in many industries
-              <div class="container">
-                <div class="row">
-                  <div class="col-lg-3 col-sm-4 col-6 text-center">
-                    <div class="service-box">
-                      <i class="fa fa-2x fa-home text-faded sr-icons"></i>
-                      <p class="text-faded">Real estate and hiring services</p>
-                    </div>
-                  </div>
-                  <div class="col-lg-3 col-sm-4 col-6 text-center">
-                    <div class="service-box">
-                      <i class="fa fa-2x  fa-graduation-cap text-faded sr-icons"></i>
-                      <p class="text-faded">Education</p>
-                    </div>
-                  </div>
-                  <div class="col-lg-3 col-sm-4 col-6 text-center">
-                    <div class="service-box">
-                      <i class="fa fa-2x fa-industry text-faded sr-icons"></i>
-                      <p class="text-faded">Manufacturing</p>
-                    </div>
-                  </div>
-                  <div class="col-lg-3 col-sm-4 col-6 text-center">
-                    <div class="service-box">
-                      <i class="fa fa-2x fa-university text-faded sr-icons"></i>
-                      <p class="text-faded">Retail</p>
-                    </div>
-                  </div>
-                  <div class="col-lg-3 col-sm-4 col-6 text-center">
-                    <div class="service-box">
-                      <i class="fa fa-2x fa-bullhorn text-faded sr-icons"></i>
-                      <p class="text-faded">Media and Communications</p>
-                    </div>
-                  </div>
-                  <div class="col-lg-3 col-sm-4 col-6 text-center">
-                    <div class="service-box">
-                      <i class="fa fa-2x fa-line-chart text-faded sr-icons"></i>
-                      <p class="text-faded">Marketing and Advertising</p>
-                    </div>
-                  </div>
-                  <div class="col-lg-3 col-sm-4 col-6 text-center">
-                    <div class="service-box">
-                      <i class="fa fa-2x fa-usd text-faded sr-icons"></i>
-                      <p class="text-faded">Finance and Insurance</p>
-                    </div>
-                  </div>
-                  <div class="col-lg-3 col-sm-4 col-6 text-center">
-                    <div class="service-box">
-                      <i class="fa fa-2x fa-handshake-o text-faded sr-icons"></i>
-                      <p class="text-faded">Personal & Professional services</p>
-                    </div>
-                  </div>
-                  <div class="col-lg-3 col-sm-4 col-6 text-center">
-                    <div class="service-box">
-                      <i class="fa fa-2x fa-wrench text-faded sr-icons"></i>
-                      <p class="text-faded">Construction and Trades</p>
-                    </div>
-                  </div>
-                  <div class="col-lg-3 col-sm-4 col-6 text-center">
-                    <div class="service-box">
-                      <i class="fa fa-2x fa-heartbeat text-faded sr-icons"></i>
-                      <p class="text-faded">Healthcare and Social Services</p>
-                    </div>
-                  </div>
-                  <div class="col-lg-3 col-sm-4 col-6 text-center">
-                    <div class="service-box">
-                      <i class="fa fa-2x fa-paint-brush text-faded sr-icons"></i>
-                      <p class="text-faded">Arts and Recreation</p>
-                    </div>
-                  </div>
-                  <div class="col-lg-3 col-sm-4 col-6 text-center">
-                    <div class="service-box">
-                      <i class="fa fa-2x fa-bed text-faded sr-icons"></i>
-                      <p class="text-faded">Hospitality</p>
-                    </div>
+              <p class="text-faded description">
+                Janet has over 30 years of experience serving clients in many industries
+                <div class="container">
+                  <div class="row" id="industries">
+                    <!-- industries populated here -->
                   </div>
                 </div>
-              </div>
-            </p>
+              </p>
+            </span>
 
-            <hr class="light">
-            <h2 class="section-heading text-white">I'll Fix the Mess</h2>
+            <span id="fix-mess">
+              <hr class="light">
+              <h2 class="section-heading text-white fix-mess"></h2>
 
-            <p class="text-faded">
-              Have you gotten behind with your bookkeeping or had a bad experience with your old bookkeeper and need someone to cleanup the mess?  That's one of my specialties.
-            </p>
+              <p class="text-faded description">
+                Have you gotten behind with your bookkeeping or had a bad experience with your old bookkeeper and need someone to cleanup the mess?  That's one of my specialties.
+              </p>
+            </span>
             <a class="btn btn-default btn-xl js-scroll-trigger text-primary" href="#services">How Can I Help?</a>
           </div>
         </div>
@@ -340,8 +269,77 @@
     <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
+    <script src="https://unpkg.com/contentful@4.6.2/dist/contentful.min.js"></script>
+
+    <script>
+      var client = contentful.createClient({
+        accessToken: 'd9d86021651dfc724a80a587849fc837b0481241acff761872317a05156568fe',
+        space: 'rb92l2zmtf6j'
+      });
+
+      //set header
+      client.getEntry('MTidb7OMiAuII0YeiQGI0')
+            .then(function(entry) {
+              $('#homeHeading').html(entry.fields.value);
+            });
+
+      //set about text
+      client.getEntry('2m6fnzZFVaa4AEewY4AAik')
+            .then(function(entry) {
+              $('#about h1').html(entry.fields.title);
+              $('#about .about-text').html(entry.fields.value);
+            });
+
+      //set industry experience
+      client.getEntry('3nROxNkm12eoWoGKUiY6eW')
+            .then(function(entry) {
+              $('#industry-experience h2').html(entry.fields.title);
+              $('#industry-experience .description').html(entry.fields.value);
+            });
+
+      //populate industries
+      client.getEntries({
+        content_type: 'industry',
+        order: 'fields.order'
+      }).then(function(entries) {
+        var industries = $('#industries');
+
+        /*
+          <div class="col-lg-3 col-sm-4 col-6 text-center">
+            <div class="service-box">
+              <i class="fa fa-2x fa-<-- entries.fields.fontAwesomeIcon --> text-faded sr-icons"></i>
+              <p class="text-faded"><-- entries.fields.title --></p>
+            </div>
+          </div>
+        */
+        entries.items.forEach(function(entry) {
+          var icon = document.createElement('i');
+          icon.className = 'fa fa-2x text-faded sr-icons fa-' + entry.fields.fontAwesomeIcon;
+          var paragraph = document.createElement('p');
+          paragraph.className = 'text-faded';
+          paragraph.innerText = entry.fields.title;
+
+          var innerDiv = document.createElement('div');
+          innerDiv.className = 'service-box';
+          $(innerDiv).append(icon).append(paragraph);
+
+          var outerDiv = document.createElement('div');
+          outerDiv.className = 'col-lg-3 col-sm-4 col-6 text-center';
+          $(outerDiv).append(innerDiv);
+          industries.append(outerDiv);
+        });
+      });
+
+      client.getEntry('4vStRJUeMUW80geMyg6mMu')
+            .then(function(entry) {
+              $('#fix-mess h2').html(entry.fields.title);
+              $('#fix-mess .description').html(entry.fields.value);
+            });
+
+    </script>
     <!-- Custom scripts for this template -->
     <script src="js/creative.min.js"></script>
+
 
     <script>
       var d = new Date();
@@ -349,6 +347,7 @@
         document.getElementById('promo').style.display = 'none';
       }
     </script>
+
 
   </body>
 
